# DeezerApi-RS

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md
src/: album.rs  blocking.rs  lib.rs  tests.rs  tests_blocking.rs  tests_random.rs  tests_random_blocking.rs  track.rs
src/models/: album.rs  api.rs  artist.rs  gw.rs  gw_album.rs  gw_artist.rs  gw_shared.rs  gw_song.rs  gw_track.rs  mod.rs  shared.rs  track.rs
