[package]
name = "DeezerApi-RS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "*" }
reqwest = { version = "*", features = ["blocking", "cookies", "json"] }
serde_json = { version = "*" }
serde = { version = "*", features = ["derive"] }
rand = { version = "*" }
