[package]
name = "DeezerApi-RS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "*" }
reqwest = { version = "0.11.18", features = ["blocking", "cookies", "json"] }
serde_json = { version = "1.0.104" }
serde = { version = "1.0.180", features = ["derive"] }
rand = { version = "0.8.5" }
